Update to use 2025-01 schema with changes to discount allocations
This revealed that the GQL codegen was previously merging type definitions
between the two schemas. Updated the script so that they are now independent.

--- a/mappers-prototype/codegen.yml
+++ b/mappers-prototype/codegen.yml
@@ -1,10 +1,10 @@
 overwrite: true
-schema: graphql/**/*.graphql
 generates:
   src/types/2024-04.d.ts:
     schema: graphql/2024-04.graphql
     plugins:
       - typescript
+      - typescript-operations
     config:
       enumsAsTypes: false
       namingConvention:
@@ -28,6 +28,7 @@ generates:
     schema: graphql/2025-01.graphql
     plugins:
       - typescript
+      - typescript-operations
     config:
       enumsAsTypes: false
       namingConvention:
