--- a/mappers-prototype/package.json
+++ b/mappers-prototype/package.json
@@ -20,6 +20,7 @@
     "@graphql-codegen/typescript": "^4.1.1",
     "@types/js-yaml": "^4.0.9",
     "@types/mocha": "^10.0.0",
+    "@types/node": "^22.9.0",
     "js-yaml": "^4.1.0",
     "mocha": "^10.0.0",
     "ts-node": "^10.0.0",
